feat: add label functionality and swagger endpoint documentation
